--- a/ShinMyongJin/TDDNodejs/node-api/package.json
+++ b/ShinMyongJin/TDDNodejs/node-api/package.json
@@ -2,5 +2,14 @@
   "dependencies": {
     "express": "^4.18.2",
     "morgan": "^1.10.0"
-  }
+  },
+  "name": "api",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
