--- a/ShinMyongJin/TDDNodejs/node-api/package.json
+++ b/ShinMyongJin/TDDNodejs/node-api/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "should": "^13.2.3"
   }
 }
