--- a/KimChanIl/codingapple/package.json
+++ b/KimChanIl/codingapple/package.json
@@ -20,5 +20,9 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "socket.io": "^4.6.1"
+  },
+  "devDependencies": {
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3"
   }
 }
