--- a/ShinMyongJin/TDDNodejs/node-api/package.json
+++ b/ShinMyongJin/TDDNodejs/node-api/package.json
@@ -10,13 +10,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha api/user/user.spec.js",
+    "test": "cross-env NODE_ENV=test mocha api/user/user.spec.js",
     "start": "node bin/www.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "mocha": "^10.2.0",
     "should": "^13.2.3",
     "supertest": "^6.3.3"
