--- a/SeoJangSeok/TDD/NODE_API/package.json
+++ b/SeoJangSeok/TDD/NODE_API/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js"
   },
   "devDependencies": {
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "should": "^13.2.3"
   }
 }
