--- a/SeoJangSeok/TDD/NODE_API/package.json
+++ b/SeoJangSeok/TDD/NODE_API/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "mocha": "^10.2.0",
-    "should": "^13.2.3"
+    "should": "^13.2.3",
+    "supertest": "^6.3.3"
   }
 }
