--- a/SeoJangSeok/TDD/NODE_API/package.json
+++ b/SeoJangSeok/TDD/NODE_API/package.json
@@ -6,7 +6,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "test": "mocha index.spec.js"
+    "test": "mocha api/user/user.spec.js"
   },
   "devDependencies": {
     "mocha": "^10.2.0",
