--- a/SeoJangSeok/TDD/NODE_API/package.json
+++ b/SeoJangSeok/TDD/NODE_API/package.json
@@ -1,12 +1,13 @@
 {
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   },
   "scripts": {
-    "start": "node index.js",
-    "test": "mocha api/user/user.spec.js"
+    "start": "node bin/www.js",
+    "test": "cross-env NODE_ENV = test mocha api/user/user.spec.js"
   },
   "devDependencies": {
     "mocha": "^10.2.0",
