--- a/SeoJangSeok/TDD/NODE_API/package.json
+++ b/SeoJangSeok/TDD/NODE_API/package.json
@@ -3,7 +3,9 @@
     "body-parser": "^1.20.2",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "sequelize": "^6.32.1",
+    "sqlite3": "^5.1.6"
   },
   "scripts": {
     "start": "node bin/www.js",
