--- a/SeoJangSeok/TDD/NODE_API/package.json
+++ b/SeoJangSeok/TDD/NODE_API/package.json
@@ -8,8 +8,8 @@
     "sqlite3": "^5.1.6"
   },
   "scripts": {
-    "start": "node bin/www.js",
-    "test": "cross-env NODE_ENV = test mocha api/user/user.spec.js"
+    "test": "cross-env NODE_ENV = test mocha api/user/user.spec.js",
+    "start": "node bin/www.js"
   },
   "devDependencies": {
     "mocha": "^10.2.0",
